Add comments to .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 set -sg escape-time 1
 set -g default-terminal "screen-256color"
 
+# Bindings
 bind r source-file ~/.tmux.conf; display "Reloaded!"
 bind | split-window -h
 bind - split-window -v
@@ -10,6 +11,7 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Colors
 set -g status-fg white
 set -g status-bg cyan
 set -g status-attr dim
@@ -27,6 +29,7 @@ set -g message-fg black
 set -g message-bg green
 set -g message-attr dim
 
+# Status bar
 set -g status-left-length 40
 set -g status-left "[#S]"
 
